# paste.rs

./: Cargo.toml  Dockerfile  README.md  paste.db
src/: main.rs  style.css
src/frontend/: index.html  style.css
