[package]
name = "pastebin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
rand = "0.8.5"
rusqlite = "0.30.0"
serde = { version = "1.0.196", features = ["derive"] }
